# bsp_tool

./: .gitattributes  .gitignore  .replit  2.92_bsp_editor.blend  2.92_bsp_editor.blend1  BUILDING.md  CHANGELOG.md  LICENSE  Makefile  README.md  SUPPORTED_GAMES.md  adding_a_cube_notes.txt  angel_city_diff.py  bhop_bsp.py  blender_titanfall_brushsides.py  box_brushsides.blend  bpy_import_bsp.py  bsp_to_obj_a1.py  bsp_tool.py  compress_sequence.py  decompile_box.py  drydock_worker.py  edge_cases.py  extract_logs.py  import_props_a1.py  lumps_to_csv.py  mp_box.map  mp_drydock.csv  mp_rr_arena_skygarden.bsp_surface_names.txt  physics.py  planes.py  port_to_r2.py  prop_hunt.md  pyproject.toml  r1_mesh_compiler_notes.txt  rbsp_append_geo.py  refactor_notes.txt  relic.txt  render_bsp.py  requirements.txt  (+6 more)
.github/: FUNDING.yml
.github/workflows/: python-package.yml  test_many_bsps.yml
bsp_struct/: __init__.py  common.py  tf2.py  vindictus.py
bsp_tool/: __init__.py  arkane.py  autodetect.py  base.py  bspx.py  external.py  gearbox.py  id_software.py  infinity_ward.py  lumps.py  nexon.py  raven.py  respawn.py  ritual.py  valve.py  wild_tangent.py
bsp_tool/archives/: __init__.py  alcohol.py  base.py  bluepoint.py  cdrom.py  golden_hawk.py  id_software.py  infinity_ward.py  ion_storm.py  mame.py  nexon.py  padus.py  pi_studios.py  pkware.py  ritual.py  runecraft.py  sega.py  troika.py  utoplanet.py  valve.py
bsp_tool/branches/: README.md  __init__.py  _lump_tools.py  apex_legends.py  base.py  bspx.py  colour.py  ieee754.py  orange_box.py  physics.py  py_struct_as_cpp.py  shared.py  texture.py  time.py  titanfall2.py  valve_physics.py  vector.py  vindictus.py  x360.py
bsp_tool/core/: __init__.py  bitfield.py  common.py  mapped_array.py  struct.py
bsp_tool/extensions/: README.md  __init__.py  apex_archive.py  archive.py  compiler_signature.py  decompile_rbsp.py  decrypt_xor.py  diff.py  fgd_gen.py  lightmaps.py  lump_analysis.py  mprt.py  pickup_counter.txt  stbsp.py  to_cpp.py  upgrade.py
bsp_tool/lightmaps/: apex_legends.py  base.py  cso2_2018.py  modern_warfare.py  quake.py  quake2.py  quake3.py  source.py  titanfall.py  titanfall2.py
docs/: CHANGELOG.md  Makefile  _config.yml  bsp_basics.md  engine_features.txt  extending.md  extensions.md  games.sc  index.md  lump_map.md  main.json  notable_tools.md  quake_erd.txt  script.js  style.css  texvec.md  timeline.html  titanfall_research.md  usage.md
examples/: PyOpenGL_Changes  basic_3d.py  bhop.py  bhop_bsp.py  bsp_all_props.py  bsp_to_obj.py  bsp_to_obj_a1.py  camera.py  compress_sequence.py  example.mtl  import_props_a1.py  obj_model_from_bsp.py  render_bsp.py  render_bsp_indices.py  render_bsp_pvs.py  render_heatmap.py  requirements.txt  skybox_preview.py  texture.py  tf2m_compliance.py  vector.py
mapsrc/: _notes
mods/: __init__.py  apex_legends.py  common.py  team_fortress2.py  tf2.py  titanfall2.py  tools.py  vector.py  vindictus.py
src/: Makefile  apex_structs.hpp  bsp_tool.hpp  camera.hpp  common.hpp  glview.cpp  identify_bsp.c  identify_bsp.h  identify_id.hpp  lump_names.cpp  lump_names.hpp  physics.hpp  py_struct_as_cpp.py  quake_bsp.h  quake_vertices.c  respawn_bsp.hpp  static_prop.hpp  structs_r1.h  test.cpp  test_identify_id.cpp  transliterated_sourceio_phy.hpp  watermark.c
tests/: __init__.py  apex_import_notes  backup_bsps.py  bsp.py  conftest.py  decorators.py  drydock_534_verts_reassembled.blend  drydock_worker.py  files.py  mapcount.py  maplist.py  mcsimp_TitanfallMapExporter.py  megatest.py  mod_bsp_sizes.txt  test_BspLump.py  test_D3DBsp.py  test_Entities.py  test_IdTechBsp.py  test_QuakeBsp.py  test_ReMakeQuakeBsp.py  test_RespawnBsp.py  test_ValveBsp.py  test_bsp.py  test_bsplump.py  test_d3d_bsp.py  test_from_archive.py  test_id_software.py  test_idtech_bsp.py  test_lightmaps.py  test_load_bsp.py  test_lumps.py  test_save.py  test_valve_bsp.py  todos.txt  utils.py
(+1569 files in other folders)
