[project]
name = "bsp_tool"
version = "0.6.0"
description = "Python library for analysing .bsp files"
readme = "README.md"
requires-python=">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["bsp", "quake", "source", "cod", "titanfall", "idtech"]
authors = [
    {name="snake-biscuits", email="haveanotherbiscuit@gmail.com"},
    {name="BobTheBob"},
    {name="rexx"}
]
maintainers = [
    {name="snake-biscuits", email="haveanotherbiscuit@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "Pillow"
]


[project.optional-dependencies]
test = ["pytest", "pytest_cov"]
# install with pip extras syntax:
# -- `$ pip install bsp_tool[test]`


[project.urls]
"Homepage" = "https://snake-biscuits.github.io/bsp_tool/"
"Repository" = "https://github.com/snake-biscuits/bsp_tool"
"Documentation" = "https://github.com/snake-biscuits/bsp_tool_docs"
"Changelog" = "https://github.com/snake-biscuits/bsp_tool/blob/master/CHANGELOG.md"
"Bug Reports" = "https://github.com/snake-biscuits/bsp_tool/issues"
"Funding" = "https://ko-fi.com/bikkie"


[build-system]
requires = ["hatchling >= 1.13"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = [
    "/bsp_tool/*",
    "/tests",
    "/CHANGELOG.md",
]


[tool.hatch.build.targets.wheel]
only-packages = true
